--- a/index.html
+++ b/index.html
@@ -21,13 +21,20 @@
         header {
             background: #50b3a2;
             color: white;
-            padding-top: 30px;
-            min-height: 70px;
+            padding: 20px 0;
             border-bottom: #e8491d 3px solid;
         }
         header h1 {
             margin: 0;
             text-align: center;
+        }
+        .header-content {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        .contact-info {
+            font-size: 0.9em;
         }
         .content {
             margin-top: 20px;
@@ -52,15 +59,22 @@
 <body>
     <header>
         <div class="container">
-            <h1>Aniket Mazumdar</h1>
-            <p>Senior Data Scientist</p>
+            <div class="header-content">
+                <h1>Aniket Mazumdar</h1>
+                <div class="contact-info">
+                    <p>Email: aniket.smazumdar@gmail.com</p>
+                    <p>Location: Bangalore, KA, India 560099</p>
+                    <p>Phone: +91-84729 87666</p>
+                </div>
+            </div>
         </div>
     </header>
 
     <div class="container">
         <div class="content">
             <div class="section">
-                <h2>About Me</h2>
+                <h2>Senior Data Scientist</h2>
+                <h3>About Me</h3>
                 <p>Data Scientist/Engineer with 6+ years of experience. Proficient in developing and implementing machine learning solutions, statistical models and predictive analytics to investigate fraud on blockchain data. Skilled in Warehousing, ETLs, SQL, Python etc. Seeking to leverage my expertise and passion for end-to-end data services and research to contribute to the success of an exciting new process.</p>
             </div>
             
@@ -165,13 +179,6 @@
                     <li>Published an academic paper on 'Experimental Implementation of Fuzzy Vision‑Based Tracking Control of Quad‑Rotor' in Springer Publications</li>
                     <li>Built multiple products, such as fraud detection models, recommendation engines etc. leveraging Data Analytics and Machine Learning.</li>
                 </ul>
-            </div>
-            
-            <div class="section">
-                <h2>Contact</h2>
-                <p>Email: aniket.smazumdar@gmail.com</p>
-                <p>Location: Bangalore, KA, India 560099</p>
-                <p>Phone: +91-84729 87666</p>
             </div>
         </div>
     </div>
