recreate same template

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
             line-height: 1.6;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
+            background-color: #ffffff;
+            color: #000000;
         }
         .container {
             width: 90%;
@@ -19,20 +19,21 @@
             margin: auto;
             overflow: hidden;
             padding: 20px;
-            background-color: white;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
         }
         header {
             text-align: center;
             margin-bottom: 20px;
+            background-color: #50b3a2;
+            color: #ffffff;
+            padding: 20px;
         }
         h1 {
             margin: 0;
-            color: #2c3e50;
+            font-size: 2.5em;
         }
         h2 {
-            color: #2980b9;
-            border-bottom: 2px solid #2980b9;
+            color: #50b3a2;
+            border-bottom: 2px solid #50b3a2;
             padding-bottom: 5px;
         }
         .main-content {
@@ -56,6 +57,18 @@
         .contact {
             text-align: center;
             margin-top: 20px;
+            background-color: #e8491d;
+            color: #ffffff;
+            padding: 20px;
+        }
+        .contact h2 {
+            color: #ffffff;
+            border-bottom: 2px solid #ffffff;
+        }
+        .job-title {
+            font-size: 1.2em;
+            font-weight: bold;
+            margin-top: 10px;
         }
     </style>
 </head>
@@ -63,7 +76,7 @@
     <div class="container">
         <header>
             <h1>Aniket Mazumdar</h1>
-            <p>Senior Data Scientist</p>
+            <div class="job-title">Senior Data Scientist</div>
         </header>
         
         <div class="main-content">
